@@ -1,98 +1,82 @@
 package controller.MenusController;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import controller.MapSetUp.MapSetUp;
-import models.Date;
 import models.Fundementals.*;
+import models.MapDetails.GreenHouse;
+import models.MapDetails.Lake;
+import models.MapDetails.Quarry;
+import models.MapDetails.Shack;
 import models.Place.Farm;
 import models.RelatedToUser.User;
 import models.*;
 import models.enums.*;
 import models.Fundementals.Player;
 import com.google.gson.Gson;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import models.enums.Types.TypeOfTile;
 
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
 import java.util.*;
+
+import java.io.*;
 
 public class GameMenuController implements MenuController {
 
-    Game currentGame = App.getCurrentGame();
 
-    public map choosingMap(int MapId){ return null;}
-
-    public Result loadGame(){ return null;}
-
-    public void savingMap(Map<map, User>userAndTheirMap){}
-
-    public Result deleteGame(int MapId){ return null;}
-
-    //TODO:sper chiz ro bezanim baraye geragten babash
-
-    public void readingMap(){ }
-
-    public void energyUnlimited(){}
-
-    public Result sellProducts(String productName, int Count){
-        return null;
-    }
-
-    public void tradeHistory(User user){}
-
-
-    // Samin: date comands are here
-
-    public Result showHour(){
+    public Result showHour() {
         int currentHour = App.getCurrentGame().getDate().getHour();
         return new Result(true, String.format("%s", currentHour));
     }
 
-    public Result showDate(){
+    public Result showDate() {
         int currentDay = App.getCurrentGame().getDate().getDayOfMonth();
         int currentYear = App.getCurrentGame().getDate().getYear();
         return new Result(true, String.format("%d/%d", currentYear, currentDay));
     }
 
-    public Result showDateTime(){
+    public Result showDateTime() {
         int currentDay = App.getCurrentGame().getDate().getDayOfMonth();
         int currentYear = App.getCurrentGame().getDate().getYear();
         int currentHour = App.getCurrentGame().getDate().getHour();
-        return new Result( true, String.format("%d/%d - Time: %d", currentYear,
+        return new Result(true, String.format("%d/%d - Time: %d", currentYear,
                 currentDay, currentHour));
     }
 
-    public Result showDayOfTheWeek(){
+    public Result showDayOfTheWeek() {
         int currentDay = App.getCurrentGame().getDate().getDayOfWeek();
         String StringDay = App.getCurrentGame().getDate().getDayName(currentDay);
-        return new Result( true, StringDay);
+        return new Result(true, StringDay);
     }
 
-    public Result cheatAdvancedTime(String time){
+    public Result cheatAdvancedTime(String time) {
         int hour;
-        try{
+        try {
             hour = Integer.parseInt(time);
-        }catch(NumberFormatException e){
-            return new Result( false, "Wrong Hour!");
+        } catch (NumberFormatException e) {
+            return new Result(false, "Wrong Hour!");
         }
         App.getCurrentGame().getDate().changeAdvancedTime(hour);
-        return new Result(true,"Time changed successfully!");
+        return new Result(true, "Time changed successfully!");
     }
 
-    public Result cheatAdvancedDay(String day){
+    public Result cheatAdvancedDay(String day) {
         int days;
-        try{
+        try {
             days = Integer.parseInt(day);
-        }catch(NumberFormatException e){
+        } catch (NumberFormatException e) {
             return new Result(false, "Wrong Day!");
         }
         App.getCurrentGame().getDate().changeAdvancedDay(days);
         return new Result(true, "Day changed successfully!");
     }
 
-    public Result showSeason(){
+    public Result showSeason() {
         Season season = App.getCurrentGame().getDate().getSeason();
-        switch(season){
+        switch (season) {
             case SPRING -> {
-                return new Result( true, "Spring");
+                return new Result(true, "Spring");
             }
             case SUMMER -> {
                 return new Result(true, "Summer");
@@ -109,20 +93,20 @@ public class GameMenuController implements MenuController {
         }
     }
 
-    public Result weatherForecast(Season season){
+    public Result weatherForecast(Season season) {
         Weather weather = App.getCurrentGame().getDate().getWeather();
         return new Result(true, Weather.getName(weather));
     }
 
 
-    public Result cheatWeather(String type){
+    public Result cheatWeather(String type) {
         Weather weather = Weather.fromString(type);
         App.getCurrentGame().getDate().setTommorowWeather(weather);
         String result = "Weather cheated successfully!";
         return new Result(true, result);
     }
 
-    public Result showWeather(){
+    public Result showWeather() {
         return new Result(true, App.getCurrentGame().getDate().getWeather().name());
     }
 
@@ -138,8 +122,10 @@ public class GameMenuController implements MenuController {
                 char contentChar = tileType;
                 if (location.getObjectInTile() instanceof Player) {
                     Farm farm = getFarmOfThisLocation(location);
-                    contentChar = farm.getOwner().getUser().getUserName().charAt(0);
-                    bgColor = "\u001B[41m";
+                    if(farm != null) {
+                        contentChar = farm.getOwner().getUser().getUserName().charAt(0);
+                        bgColor = "\u001B[41m";
+                    }
                 }
 
                 String block = bgColor + " " + contentChar + " " + "\u001B[0m";
@@ -156,7 +142,7 @@ public class GameMenuController implements MenuController {
         }
         System.out.println("Do you want to enable map guidance?");
         String selection = scanner.nextLine();
-        if(selection.equals("yes")) helpToReadMap();
+        if (selection.equals("yes")) helpToReadMap();
     }
 
     private Farm getFarmOfThisLocation(Location location) {
@@ -180,6 +166,10 @@ public class GameMenuController implements MenuController {
             case STONE -> "\u001B[103m";     // bright yellow background
             case TREE -> "\u001B[102m";      // bright green background
             case LAKE -> "\u001B[46m";       // cyan background
+            case STORE -> "\u001B[104m";       // Bright Blue
+            case BARN -> "\u001B[44m";         // Dark Blue (Standard ANSI)
+            case COOP -> "\u001B[48;5;155m";        // light green
+            case PLOUGHED_LAND -> "\u001B[48;5;214m"; //orange
             default -> "\u001B[41m";
         };
     }
@@ -189,6 +179,7 @@ public class GameMenuController implements MenuController {
         Game newGame = new Game();
         App.setCurrentGame(newGame);
         MapSetUp.initializeFarms();
+        MapSetUp.storesSetUp();
 
         loadAllUsersFromFiles();
 
@@ -211,7 +202,7 @@ public class GameMenuController implements MenuController {
 
             System.out.println("Do you want to know what each farm has?");
             String selection = scanner.nextLine();
-            if(selection.equals("yes"))guideForFarm();
+            if (selection.equals("yes")) guideForFarm();
 
             while (true) {
                 System.out.println("Choosing farm for " + username + ":");
@@ -252,14 +243,14 @@ public class GameMenuController implements MenuController {
 
         App.getCurrentGame().setUserAndMap(farmOwnership);
         App.getCurrentGame().setPlayers(players);
-        App.getCurrentGame().setCurrentPlayer(players.getFirst());
+        App.getCurrentGame().setCurrentPlayer(players.get(0));
 
         MapSetUp.showMapWithFarms(App.getCurrentGame().getMainMap());
-
+        App.getCurrentGame().setGameId(App.getGameId());
         System.out.println("All farms have been assigned!");
     }
 
-    private void guideForFarm(){
+    private void guideForFarm() {
         System.out.println("Farm selection guide:\n" +
                 "Farm with ID 0 has two lakes, a Shack, a quarry, and a greenhouse\n" +
                 "Farm with ID 1 has one lake, a Shack, two quarries, and a greenhouse\n" +
@@ -267,6 +258,7 @@ public class GameMenuController implements MenuController {
                 "Farm with ID 3 has one lake, two Shack, a quarry, and a greenhouse\n" +
                 "Be careful, you do not have the right to change your mind after choosing a farm!");
     }
+
     private static Map<Farm, Player> getFarmPlayerMap(ArrayList<Player> players, ArrayList<Integer> chosenFarmNumbers) {
         Map<Farm, Player> farmOwnership = new HashMap<>();
         ArrayList<Farm> farms = App.getCurrentGame().getMainMap().getFarms();
@@ -313,7 +305,7 @@ public class GameMenuController implements MenuController {
                 " " + App.getCurrentGame().getCurrentPlayer().getUserLocation().getyAxis());
     }
 
-    public Result nextTurn() {
+    public static Result nextTurn() {
         List<Player> players = App.getCurrentGame().getPlayers();
         Player currentPlayer = App.getCurrentGame().getCurrentPlayer();
         App.getCurrentGame().getCurrentPlayer().setEnergy(200);
@@ -322,33 +314,42 @@ public class GameMenuController implements MenuController {
         int nextIndex = (currentIndex + 1) % players.size();
 
         App.getCurrentGame().setCurrentPlayer(players.get(nextIndex));
+        if (App.getCurrentGame().getCurrentPlayer().isHasCollapsed() &&
+                (App.getCurrentGame().getDate().getHour() == 8 || App.getCurrentGame().getDate().getHour() == 9)){
+            App.getCurrentGame().getCurrentPlayer().setHasCollapsed(false);
+            App.getCurrentGame().getCurrentPlayer().setEnergy(150);
+        }else if (App.getCurrentGame().getCurrentPlayer().isHasCollapsed()){
+            int nextIndex2 = (nextIndex + 1) % players.size();
+            App.getCurrentGame().setCurrentPlayer(players.get(nextIndex2));
+        }
+
         int newHour = App.getCurrentGame().getDate().getHour() + 1;
         App.getCurrentGame().getDate().setHour(newHour);
 
         return new Result(true, "Turn moved to " + players.get(nextIndex).getUser().getUserName());
     }
 
-    public Result showEnergy(){
+    public Result showEnergy() {
         Player player = App.getCurrentGame().getCurrentPlayer();
         return new Result(true, String.format("%d", player.getEnergy()));
     }
 
-    public Result setEnergy(String energy){
+    public Result setEnergy(String energy) {
         int amount = Integer.parseInt(energy);
         App.getCurrentGame().getCurrentPlayer().setEnergy(amount);
         return new Result(true, "Energy set successfully!");
     }
 
-    public Result setUnlimited(){
+    public Result setUnlimited() {
         App.getCurrentGame().getCurrentPlayer().setUnlimited();
         return new Result(true, "Energy unlimited!");
     }
 
-    public Result showInventory(){
+    public Result showInventory() {
         Player player = App.getCurrentGame().getCurrentPlayer();
         BackPack backPack = player.getBackPack();
         StringBuilder result = new StringBuilder("Inventory items: \n");
-        for(Tools tools : backPack.getTools().keySet()){
+        for (Tools tools : backPack.getTools().keySet()) {
             result.append(tools.getName());
         }
         return new Result(true, result.toString());
@@ -356,10 +357,9 @@ public class GameMenuController implements MenuController {
 
     public Result trashItem(String name, String amount) {
         BackPack backPack = App.getCurrentGame().getCurrentPlayer().getBackPack();
-        if(amount == null){
+        if (amount == null) {
             backPack.trashAll(name);
-        }
-        else{
+        } else {
             int intAmount = Integer.parseInt(amount);
             backPack.trash(name, intAmount);
         }
@@ -367,111 +367,165 @@ public class GameMenuController implements MenuController {
     }
 
     public Result EXIT() {
-        Game game = App.getCurrentGame();
-        Gson gson = new Gson();
+        Game lastGame = App.getCurrentGame();
+        int gameID = lastGame.getGameId();
 
-        try (FileWriter writer = new FileWriter("game_" + game.getGameId() + "_mainMap.json")) {
-            gson.toJson(game.getMainMap(), writer);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        List<Map<String, Object>> playersData = new ArrayList<>();
 
-        try (FileWriter writer = new FileWriter("game_" + game.getGameId() + "_date.json")) {
-            gson.toJson(game.getDate(), writer);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-
-        int index = 0;
-        for (Player player : game.getPlayers()) {
-            try (FileWriter writer = new FileWriter("game_" + game.getGameId() + "_player_" + index + ".json")) {
-                gson.toJson(player, writer);
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
+        for (Player player : lastGame.getPlayers()) {
+            Map<String, Object> playerMap = new HashMap<>();
+            playerMap.put("username", player.getUser().getUserName());
+            playerMap.put("x", player.getUserLocation().getxAxis());
+            playerMap.put("y", player.getUserLocation().getyAxis());
+            playerMap.put("energy", player.getEnergy());
+            playerMap.put("groupId", gameID);
 
             Farm farm = player.getOwnedFarm();
-            if (farm != null) {
-                try (FileWriter writer = new FileWriter("game_" + game.getGameId() + "_farm_" + index + ".json")) {
-                    gson.toJson(farm, writer);
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
-            }
-            index++;
+            Map<String, Object> farmMap = new HashMap<>();
+
+            farmMap.put("location", rectToMap(farm.getLocation()));
+            farmMap.put("lake1", rectToMap(farm.getLake1().getLocation()));
+            farmMap.put("lake2", rectToMap(farm.getLake2().getLocation()));
+            farmMap.put("greenhouse1", rectToMap(farm.getGreenHouse().getLocation()));
+            farmMap.put("greenhouse2", rectToMap(farm.getGreenHouse2().getLocation()));
+            farmMap.put("shack1", rectToMap(farm.getShack().getLocation()));
+            farmMap.put("shack2", rectToMap(farm.getShack2().getLocation()));
+            farmMap.put("quarry1", rectToMap(farm.getQuarry().getLocation()));
+            farmMap.put("quarry2", rectToMap(farm.getQuarry2().getLocation()));
+
+            farmMap.put("farmAnimals", farm.getFarmAnimals().stream().map(Object::toString).toList());
+            farmMap.put("animalHomes", farm.getAnimalHomes().stream().map(Object::toString).toList());
+
+            playerMap.put("farm", farmMap);
+            playersData.add(playerMap);
         }
+
+        Map<String, Object> saveData = new HashMap<>();
+        saveData.put("gameId", gameID);
+        saveData.put("players", playersData);
+        List<Map<String, Object>> mapData = new ArrayList<>();
+        for (Location tile : lastGame.getMainMap().getTilesOfMap()) {
+            Map<String, Object> tileMap = new HashMap<>();
+            tileMap.put("x", tile.getxAxis());
+            tileMap.put("y", tile.getyAxis());
+            tileMap.put("typeOfTile", tile.getTypeOfTile().name());
+            mapData.add(tileMap);
+        }
+        saveData.put("mainMap", mapData);
+
+        ObjectMapper mapper = new ObjectMapper();
+        File file = new File("saves/saved_game" + gameID + ".json");
+        File parent = file.getParentFile();
+        if (parent != null && !parent.exists()) {
+            parent.mkdirs();
+        }
+
+        try {
+            mapper.writerWithDefaultPrettyPrinter().writeValue(file, saveData);
+        } catch (IOException e) {
+            return new Result(false, "Failed to save the game: " + e.getMessage());
+        }
+
         App.setCurrentMenu(Menu.MainMenu);
-        App.getCurrentGame().setGameId(App.getGameId());
-        int newId = App.getGameId() + 1;
-        App.setGameId(newId);
-        App.getGame().add(App.getCurrentGame());
-        App.setLoggedInUser(null);
         App.setCurrentGame(null);
-        return new Result(true, "now you are in Main menu");
+        int newGameID = gameID + 1;
+        App.setGameId(newGameID);
+        return new Result(true, "Game saved and exited! You are now in Main menu.");
     }
 
-    public Result loadGame(int gameId) {
+    private Map<String, Object> rectToMap(LocationOfRectangle rect) {
+        Map<String, Object> map = new HashMap<>();
+        map.put("topLeft", locationToMap(rect.getTopLeftCorner()));
+        map.put("bottomRight", locationToMap(rect.getDownRightCorner()));
+        return map;
+    }
 
-        File gameDir = new File("savedGames/game_" + gameId);
-        if (!gameDir.exists() || !gameDir.isDirectory()) {
-            return new Result(false, "No saved game found with ID: " + gameId);
-        }
+    private Map<String, Integer> locationToMap(Location loc) {
+        Map<String, Integer> map = new HashMap<>();
+        map.put("x", loc.getxAxis());
+        map.put("y", loc.getyAxis());
+        return map;
+    }
 
-        Gson gson = new Gson();
+    public Result loadGameById(int gameIdToLoad) {
+        ObjectMapper mapper = new ObjectMapper();
+        File file = new File("saves/saved_game" + gameIdToLoad + ".json");
+
+        if (!file.exists())
+            return new Result(false, "No saved game found with gameId: " + gameIdToLoad);
+
         try {
-            // Load MainMap
-            File mapFile = new File(gameDir, "mainMap.json");
-            map mainMap = gson.fromJson(new FileReader(mapFile), map.class);
+            Map<String, Object> saveData = mapper.readValue(file, new TypeReference<>() {});
+            List<Map<String, Object>> playersData = (List<Map<String, Object>>) saveData.get("players");
+            List<Map<String, Object>> mapData = (List<Map<String, Object>>) saveData.get("mainMap");
+            map mainMap = new map();
 
-            // Load Game Date
-            File dateFile = new File(gameDir, "date.json");
-            Date date = gson.fromJson(new FileReader(dateFile), Date.class);
+            for (Map<String, Object> tileMap : mapData) {
+                int x = (int) tileMap.get("x");
+                int y = (int) tileMap.get("y");
+                String typeName = (String) tileMap.get("typeOfTile");
 
-            // Load all farms
-            List<Farm> farms = new ArrayList<>();
-            for (int i = 0; i < 4; i++) {
-                File farmFile = new File(gameDir, "farm_" + i + ".json");
-                if (farmFile.exists()) {
-                    Farm farm = gson.fromJson(new FileReader(farmFile), Farm.class);
-                    farms.add(farm);
-                }
+                TypeOfTile type = TypeOfTile.valueOf(typeName);
+                Location loc = new Location(x, y);
+                loc.setTypeOfTile(type);
+                mainMap.getTilesOfMap().add(loc);
             }
-
-            // Create a new Game
-            Game game = new Game();
-            game.setMainMap(mainMap);
-            game.setDate(date);
 
             ArrayList<Player> players = new ArrayList<>();
-            Map<Farm, Player> userAndMap = new HashMap<>();
+            for (Map<String, Object> playerMap : playersData) {
+                String username = (String) playerMap.get("username");
+                int x = (int) playerMap.get("x");
+                int y = (int) playerMap.get("y");
+                int energy = (int) playerMap.get("energy");
+               Location loc = new Location(x, y);
 
-            // Reconstruct Players and Users
-            for (Farm farm : farms) {
-                Player player = farm.getOwner();
-                if (player == null) continue;
-                players.add(player);
+                User user = App.getUserByUsername(username);
+                Player player = new Player(user, loc, false, null, null, null, null, null, null, false, false);
+                player.setUserLocation(loc);
+                player.setEnergy(energy);
 
+                Map<String, Object> farmMap = (Map<String, Object>) playerMap.get("farm");
+                Farm farm = new Farm(mapToRect((Map<String, Object>) farmMap.get("location")));
+
+                farm.setFarmLocation(mapToRect((Map<String, Object>) farmMap.get("location")));
+                farm.setLake1(new Lake(mapToRect((Map<String, Object>) farmMap.get("lake1"))));
+                farm.setLake2(new Lake(mapToRect((Map<String, Object>) farmMap.get("lake2"))));
+                farm.setGreenHouse(new GreenHouse(mapToRect((Map<String, Object>) farmMap.get("greenhouse1"))));
+                farm.setGreenHouse2(new GreenHouse(mapToRect((Map<String, Object>) farmMap.get("greenhouse2"))));
+                farm.setShack(new Shack(mapToRect((Map<String, Object>) farmMap.get("shack1"))));
+                farm.setShack2(new Shack(mapToRect((Map<String, Object>) farmMap.get("shack2"))));
+                farm.setQuarry(new Quarry(mapToRect((Map<String, Object>) farmMap.get("quarry1"))));
+                farm.setQuarry2(new Quarry(mapToRect((Map<String, Object>) farmMap.get("quarry2"))));
+                farm.setOwner(player);
                 player.setOwnedFarm(farm);
-                player.setUserLocation(mainMap.findLocation(
-                        farm.getLocation().getTopLeftCorner().getxAxis(),
-                        farm.getLocation().getTopLeftCorner().getyAxis()
-                ));
-                mainMap.findLocation(farm.getLocation().getTopLeftCorner().getxAxis(),
-                        farm.getLocation().getTopLeftCorner().getyAxis()).setObjectInTile(player);
-
-                userAndMap.put(farm, player);
+                players.add(player);
             }
 
-            game.setPlayers(players);
-            game.setUserAndMap(userAndMap);
-            game.setCurrentPlayer(players.getFirst());
+            Game loadedGame = new Game();
+            loadedGame.setPlayers(players);
+            loadedGame.setMainMap(mainMap);
+            App.setCurrentGame(loadedGame);
+            App.getCurrentGame().setCurrentPlayer(players.get(0));
 
-            App.setCurrentGame(game);
-            return new Result(true, "Game loaded successfully!");
+            for(Player player : App.getCurrentGame().getPlayers()) {
+                Location loc = player.getUserLocation();
+                App.getCurrentGame().getMainMap().findLocation(loc.getxAxis(), loc.getyAxis()).setObjectInTile(player);
+                Farm farm = player.getOwnedFarm();
+                App.getCurrentGame().getMainMap().getFarms().add(farm);
+            }
+
+            return new Result(true, "Game " + gameIdToLoad + " loaded successfully!");
         } catch (IOException e) {
-            e.printStackTrace();
-            return new Result(false, "Failed to load game due to IO error.");
+            return new Result(false, "Failed to load the game: " + e.getMessage());
         }
     }
-}
 
+    private LocationOfRectangle mapToRect(Map<String, Object> map) {
+        Map<String, Integer> topLeft = (Map<String, Integer>) map.get("topLeft");
+        Map<String, Integer> bottomRight = (Map<String, Integer>) map.get("bottomRight");
+        return new LocationOfRectangle(
+                new Location(topLeft.get("x"), topLeft.get("y")),
+                new Location(bottomRight.get("x"), bottomRight.get("y"))
+        );
+    }
+}
